add: some custom colors (referencing to default colors)

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,8 +1,8 @@
-<nav class="h-dvh bg-teal-50 px-5 py-4 flex flex-col justify-between gap-5">
+<nav class="h-dvh bg-primary-50 px-5 py-4 flex flex-col justify-between gap-5">
   <header class="flex flex-col items-center justify-center gap-1">
-    <div class="size-36 rounded-full bg-neutral-200 mb-2.5"></div>
-    <h1 class="text-xl font-medium text-teal-700">Alben Bustamante</h1>
-    <h2 class="font-medium text-teal-800">Web Developer</h2>
+    <div class="size-36 rounded-full bg-gray-200 mb-2.5"></div>
+    <h1 class="text-xl font-medium text-primary-700">Alben Bustamante</h1>
+    <h2 class="font-medium text-primary-800">Web Developer</h2>
   </header>
   <ul class="flex flex-col justify-center h-full">
     <app-navbar-item headline="About me" />
