--- a/src/app/components/navbar-item/navbar-item.component.html
+++ b/src/app/components/navbar-item/navbar-item.component.html
@@ -1,5 +1,5 @@
-<li class="w-full flex justify-center hover:bg-teal-100">
-  <a href="" class="w-full text-center text-teal-900 font-medium py-2.5">
+<li class="w-full flex justify-center hover:bg-primary-100">
+  <a href="" class="w-full text-center text-primary-900 font-medium py-2.5">
     {{ headline }}
   </a>
 </li>
