--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,18 +1,26 @@
-<nav class="h-dvh bg-primary-50 px-5 py-4 flex flex-col justify-between gap-5">
-  <header class="flex flex-col items-center justify-center gap-1">
-    <div class="size-36 rounded-full bg-gray-200 mb-2.5"></div>
-    <h1 class="text-xl font-medium text-primary-700">Alben Bustamante</h1>
-    <h2 class="font-medium text-primary-800">Web Developer</h2>
-  </header>
-  <ul class="flex flex-col justify-center h-full">
+<nav
+  class="top-0 right-0 left-0 bg-primary-50 px-5 py-4 flex items-center justify-between gap-5 h-20"
+>
+  <h1 class="text-xl font-medium text-primary-700">Alben Bustamante</h1>
+  <ul
+    class="fixed right-0 top-20 bottom-0 flex flex-col justify-center h-[calc(100dvh_-_5rem)] transition-transform duration-300 bg-primary-50 w-3/4"
+    [ngClass]="{ 'translate-x-full': !show() }"
+  >
     <app-navbar-item headline="About me" />
     <app-navbar-item headline="Skills" />
     <app-navbar-item headline="Experience" />
     <app-navbar-item headline="Projecs" />
     <app-navbar-item headline="Certifications" />
   </ul>
-  <footer class="flex justify-center items-center gap-7">
-    <p>Language</p>
-    <p>Dark Theme</p>
-  </footer>
+  <div class="flex justify-center items-center gap-2.5">
+    <svg class="size-8 text-primary-500" globe-icon></svg>
+    <svg class="size-8 text-primary-500" moon-icon></svg>
+  </div>
+  <button class="outline-none cursor-pointer" (click)="toggleShowNavBar()">
+    @if (show()) {
+    <svg class="size-8 text-primary-500" close-menu-icon></svg>
+    } @else {
+    <svg class="size-8 text-primary-500" open-menu-icon></svg>
+    }
+  </button>
 </nav>
