--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-navbar [show]="showNavBar" /> <router-outlet /> <svg menu-icon></svg>
+<app-navbar [show]="showNavBar" />
+<main class="px-5 min-h-[calc(100dvh_-_5rem)] w-full">
+  <router-outlet />
+</main>
