update: main design

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav
-  class="sticky top-0 right-0 left-0 bg-primary-50 px-5 py-4 flex items-center justify-between gap-5 h-20"
+  class="sticky top-0 right-0 left-0 bg-primary-50 px-7 py-5 rounded-2xl flex items-center justify-between gap-5 h-20"
 >
   <h1 class="text-lg font-medium text-primary-700">
     {{ "\<Alben Bustamante />" }}
