--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<app-navbar [show]="showNavBar" />
-<main class="px-5 min-h-[calc(100dvh_-_5rem)] w-full">
-  <router-outlet />
-</main>
+<div class="p-5 flex flex-col gap-5">
+  <app-navbar [show]="showNavBar" />
+  <main class="px-7 py-5 bg-primary-50 rounded-2xl">
+    <router-outlet />
+  </main>
+</div>
