--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,5 +1,5 @@
 <section
-  class="flex justify-center items-center w-full h-[calc(100dvh_-_5rem)]"
+  class="flex justify-center items-center w-full h-[calc(100dvh_-_5rem_-_calc(1.25rem_*_5))]"
 >
   <div class="flex flex-col items-center gap-7">
     <header>
