--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,12 +1,12 @@
-<section
-  class="flex justify-center items-center w-full h-[calc(100dvh_-_5rem_-_calc(1.25rem_*_5))]"
->
-  <div class="flex flex-col items-center gap-7">
-    <header>
-      <h2 class="text-center text-5xl font-semibold">Software Developer</h2>
-    </header>
-    <div class="w-full">
-      <app-button class="w-full">Download CV</app-button>
+<app-main-container>
+  <div class="flex justify-center items-center size-full">
+    <div class="flex flex-col items-center gap-7">
+      <header>
+        <h2 class="text-center text-5xl font-semibold">Software Developer</h2>
+      </header>
+      <div class="w-full">
+        <app-button class="w-full" (click)="alert()">Get my resume</app-button>
+      </div>
     </div>
   </div>
-</section>
+</app-main-container>
