--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<div class="p-5">
-  <main
-    class="w-full h-[calc(100dvh_-_4rem_-_2.5rem)] px-7 py-5 bg-primary-50 rounded-2xl"
-  >
+<app-navbar />
+<div class="p-5 flex flex-col gap-5">
+  <app-sidebar />
+  <main class="w-full min-h-dvh">
     <app-home />
   </main>
-  <app-navbar />
 </div>
+<app-accessibility />
