--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,1 +1,12 @@
-<p>sidebar works!</p>
+<aside class="bg-primary-50 p-4 flex flex-col gap-1">
+  <header class="flex flex-col-reverse gap-1">
+    <h1 class="text-center text-2xl font-semibold text-primary-700">
+      Alben Bustamante
+    </h1>
+    <p class="text-center text-neutral-700 font-medium">Hi there, I'm</p>
+  </header>
+  <p class="text-center text-neutral-700 text-balance">
+    A passionate FullStack Developer who builds scalable Software and Web
+    solutions through of Java and Angular.
+  </p>
+</aside>
