update: sidebar design, content, and move all icon components to icons folder

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-navbar />
 <div class="p-5 flex flex-col gap-5">
   <app-sidebar />
-  <main class="w-full min-h-dvh">
+  <main>
     <app-home />
   </main>
 </div>
