--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav
-  class="fixed left-5 bottom-0 right-5 bg-primary-50 px-7 rounded-t-2xl flex items-center justify-center h-16"
+  class="fixed left-5 -bottom-px right-5 bg-primary-50 px-7 rounded-t-2xl flex items-center justify-center h-16 z-50"
 >
   <ul class="flex items-center justify-between gap-2">
     <app-navbar-item headline="Home" />
