update: accessibility location

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
 <app-navbar />
 <div class="p-5 flex flex-col gap-5">
   <app-sidebar />
-  <main>
-    <app-home />
+  <main class="pb-16">
+    <app-home id="home" />
   </main>
 </div>
-<app-accessibility />
