--- a/src/app/components/accessibility/accessibility.component.html
+++ b/src/app/components/accessibility/accessibility.component.html
@@ -1,4 +1,4 @@
-<div class="fixed right-2 bottom-14 flex flex-col gap-7 z-50">
+<div class="flex items-center justify-center gap-12">
   <svg class="size-7 text-primary-500" globe-icon></svg>
   <svg class="size-7 text-primary-500" moon-icon></svg>
 </div>
