--- a/src/app/components/navbar-item/navbar-item.component.html
+++ b/src/app/components/navbar-item/navbar-item.component.html
@@ -1,6 +1,6 @@
 <li class="w-full hover:bg-primary-100">
   <a
-    href=""
+    [href]="route"
     class="w-full flex items-center justify-center text-sm text-center text-primary-900 font-medium px-2 h-16 align-middle"
   >
     {{ headline }}
