--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,9 +2,9 @@
   class="fixed left-5 -bottom-px right-5 bg-primary-50 px-7 rounded-t-2xl flex items-center justify-center h-16 z-50"
 >
   <ul class="flex items-center justify-between gap-2">
-    <app-navbar-item headline="Home" />
-    <app-navbar-item headline="About" />
-    <app-navbar-item headline="Portfolio" />
-    <app-navbar-item headline="Contact" />
+    <app-navbar-item headline="Home" route="#home" />
+    <app-navbar-item headline="About" route="" />
+    <app-navbar-item headline="Portfolio" route="" />
+    <app-navbar-item headline="Contact" route="" />
   </ul>
 </nav>
