--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,11 +1,14 @@
 <aside
   class="w-full h-[calc(100dvh_-_6.5rem)] bg-primary-50 p-5 rounded-xl flex flex-col justify-between gap-5"
 >
-  <header class="flex flex-col-reverse gap-1 py-5">
-    <h1 class="text-center text-2xl font-semibold text-primary-700">
-      Alben Bustamante
-    </h1>
-    <p class="text-center text-neutral-700 font-medium">Hi there, I'm</p>
+  <header class="flex flex-col justify-between gap-7 py-5">
+    <div class="flex flex-col-reverse gap-1">
+      <h1 class="text-center text-2xl font-semibold text-primary-700">
+        Alben Bustamante
+      </h1>
+      <p class="text-center text-neutral-700 font-medium">Hi there, I'm</p>
+    </div>
+    <app-accessibility />
   </header>
   <div class="border-y-2 border-neutral-300 py-12">
     <p class="text-center text-lg text-neutral-700 text-balance font-semibold">
