update: navbar items and page font

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-navbar />
 <div class="p-5 flex flex-col gap-5">
-  <app-sidebar />
+  <app-sidebar id="home" />
   <main class="pb-16">
     <app-home id="home" />
   </main>
