--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -3,8 +3,8 @@
 >
   <ul class="flex items-center justify-between gap-2">
     <app-navbar-item headline="Home" route="#home" />
-    <app-navbar-item headline="About" route="" />
-    <app-navbar-item headline="Portfolio" route="" />
-    <app-navbar-item headline="Contact" route="" />
+    <app-navbar-item headline="Resume" route="#resume" />
+    <app-navbar-item headline="Projects" route="#projects" />
+    <app-navbar-item headline="Contact" route="#contact" />
   </ul>
 </nav>
