define: structure pages

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
 <div class="p-5 flex flex-col gap-5">
   <app-sidebar id="home" />
   <main class="pb-16">
-    <app-home id="home" />
+    <app-resume id="resume" />
+    <app-projects id="projects" />
+    <app-contact id="contact" />
   </main>
 </div>
