define: responsive design to page layout

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <aside
-  class="w-full h-[calc(100dvh_-_6.5rem)] bg-primary-50 p-5 rounded-xl flex flex-col justify-between gap-5"
+  class="w-full h-[calc(100dvh_-_6.5rem)] bg-primary-50 p-5 rounded-xl flex flex-col justify-between gap-5 lg:sticky lg:top-16 lg:left-5 lg:bottom-5 lg:max-w-sm"
 >
   <header class="flex flex-col justify-between gap-7 py-5">
     <div class="flex flex-col-reverse gap-1">
