--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-navbar />
-<div class="p-5 flex flex-col gap-5">
+<div class="p-5 lg:flex lg:gap-5 lg:mt-16">
   <app-sidebar id="home" />
-  <main class="pb-16">
+  <main class="mt-5 pb-16 flex flex-col gap-5">
     <app-resume id="resume" />
     <app-projects id="projects" />
     <app-contact id="contact" />
