update: responsive for sidebar social media section and set global outline to none

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,10 +1,13 @@
 <nav
   class="fixed left-5 max-lg:-bottom-px right-5 bg-primary-50 px-7 max-lg:rounded-t-2xl flex items-center justify-center h-16 z-50 lg:top-0 lg:rounded-b-2xl"
 >
-  <ul class="flex items-center justify-between gap-2">
+  <ul class="flex items-center gap-0">
     <app-navbar-item headline="Home" route="#home" />
+    <hr class="border-primary-700 rotate-90 w-4 -m-1.5" />
     <app-navbar-item headline="Resume" route="#resume" />
+    <hr class="border-primary-700 rotate-90 w-4 -m-1.5" />
     <app-navbar-item headline="Projects" route="#projects" />
+    <hr class="border-primary-700 rotate-90 w-4 -m-1.5" />
     <app-navbar-item headline="Contact" route="#contact" />
   </ul>
 </nav>
