add: titles and subtitles to landing

--- a/src/app/features/landing/resume/resume.component.html
+++ b/src/app/features/landing/resume/resume.component.html
@@ -1,1 +1,4 @@
-<p>resume works!</p>
+<app-landing-title headline="Resume" />
+<app-landing-subtitle headline="Education" />
+<app-landing-subtitle headline="Experience" />
+<app-landing-subtitle headline="Skills" />
