--- a/src/app/features/landing/components/sidebar/sidebar.component.html
+++ b/src/app/features/landing/components/sidebar/sidebar.component.html
@@ -2,13 +2,15 @@
   class="w-full h-[calc(100dvh_-_6.5rem)] bg-primary-50 p-5 rounded-xl flex flex-col justify-between gap-5 lg:sticky lg:top-16 lg:left-5 lg:bottom-5 lg:max-w-sm"
 >
   <header class="flex flex-col justify-between gap-7 py-5">
-    <div class="flex flex-col-reverse gap-1">
-      <h1 class="text-center text-2xl font-semibold text-primary-700">
+    <div class="flex flex-col-reverse gap-2.5">
+      <h1
+        class="text-center text-4xl md:max-lg:text-5xl font-semibold text-primary-700"
+      >
         Alben Bustamante
       </h1>
-      <p class="text-center text-primary-950 font-medium">Hi there, I'm</p>
+      <p class="text-center text-primary-950 font-medium">Hey there, I'm</p>
     </div>
-    <app-accessibility />
+    <!--app-accessibility /-->
   </header>
   <div class="border-y-2 border-primary-100 py-12">
     <p class="text-center text-lg text-primary-900 text-balance font-semibold">
