update: resume content and define some subcomponents

--- a/src/app/features/landing/resume/resume.component.html
+++ b/src/app/features/landing/resume/resume.component.html
@@ -1,4 +1,20 @@
-<app-landing-title headline="Resume" />
-<app-landing-subtitle headline="Education" />
-<app-landing-subtitle headline="Experience" />
-<app-landing-subtitle headline="Skills" />
+<app-landing-section-container headline="Resume">
+  <section>
+    <app-landing-subtitle headline="Education" />
+    <ul>
+      <li>Amazon Junior Software Developer</li>
+      <li>Software Engineer</li>
+      <li>Bachelor in Science</li>
+    </ul>
+  </section>
+  <section>
+    <app-landing-subtitle headline="Experience" />
+    <ul>
+      <li>Servinet Computers</li>
+      <li>NoCountry</li>
+    </ul>
+  </section>
+  <section>
+    <app-landing-subtitle headline="Skills" />
+  </section>
+</app-landing-section-container>
