refactor: resume page

--- a/src/app/features/landing/resume/resume.component.html
+++ b/src/app/features/landing/resume/resume.component.html
@@ -1,19 +1,6 @@
 <app-landing-section-container headline="Resume">
-  <section>
-    <app-landing-subtitle headline="Education" />
-    <ul>
-      <li>Amazon Junior Software Developer</li>
-      <li>Software Engineer</li>
-      <li>Bachelor in Science</li>
-    </ul>
-  </section>
-  <section>
-    <app-landing-subtitle headline="Experience" />
-    <ul>
-      <li>Servinet Computers</li>
-      <li>NoCountry</li>
-    </ul>
-  </section>
+  <app-education />
+  <app-experience />
   <section>
     <app-landing-subtitle headline="Skills" />
   </section>
