update: sidebar position

--- a/src/app/features/landing/landing.component.html
+++ b/src/app/features/landing/landing.component.html
@@ -1,6 +1,6 @@
 <div class="p-5 flex max-lg:flex-col gap-5 lg:mt-16">
   <app-sidebar id="home" />
-  <main class="max-lg:pb-16 flex flex-col gap-5 w-full">
+  <main class="max-lg:pb-16 flex flex-col gap-5 w-full lg:ml-80">
     <app-resume id="resume" />
     <app-projects id="projects" />
     <app-contact id="contact" />
