add: skill icons

--- a/src/app/features/landing/resume/resume.component.html
+++ b/src/app/features/landing/resume/resume.component.html
@@ -1,7 +1,5 @@
 <app-landing-section-container headline="Resume">
   <app-education />
   <app-experience />
-  <section>
-    <app-landing-subtitle headline="Skills" />
-  </section>
+  <app-skills />
 </app-landing-section-container>
