--- a/src/app/features/landing/projects/projects.component.html
+++ b/src/app/features/landing/projects/projects.component.html
@@ -1,1 +1,12 @@
-<app-landing-title headline="Projects" />
+<app-landing-section-container headline="Projects">
+  <ul class="grid grid-cols-[repeat(auto-fit,_minmax(20rem,_1fr))] gap-3.5">
+    <li>Portfolio</li>
+    <li>FinManage</li>
+    <li>COP Calculator</li>
+    <li>Fun Virtual Reading</li>
+    <li>ToDo List</li>
+    <li>Microblogging</li>
+    <li>Register Sales</li>
+    <li>Banking Correspondent</li>
+  </ul>
+</app-landing-section-container>
