--- a/src/app/features/landing/projects/components/project-item/project-item.component.html
+++ b/src/app/features/landing/projects/components/project-item/project-item.component.html
@@ -1,22 +1,26 @@
 <article
-  class="cursor-pointer p-5 flex flex-col gap-5 shadow-md shadow-primary-200 rounded-4xl hover:-translate-y-1 hover:shadow-lg transition-all"
+  class="p-5 flex max-lg:flex-col gap-5 shadow-md shadow-primary-200 bg-primary-50 rounded-4xl hover:-translate-y-1 hover:shadow-lg transition-all"
 >
-  <header class="flex flex-col-reverse gap-3">
-    <h3 class="text-center text-xl sm:text-2xl md:text-3xl font-semibold">
+  <img
+    src="https://picsum.photos/400/300"
+    alt="random-img"
+    class="rounded-4xl object-cover aspect-video"
+  />
+  <div class="flex flex-col justify-between gap-5">
+    <h3
+      class="text-center text-xl sm:text-2xl md:text-3xl font-semibold md:max-lg:h-[4.5rem] flex items-center justify-center"
+    >
       {{ project.name }}
     </h3>
-    <img
-      src="https://picsum.photos/400/300"
-      alt="random-img"
-      class="rounded-4xl object-cover aspect-video"
-    />
-  </header>
-  <p class="text-sm sm:text-base md:text-lg overflow-ellipsis line-clamp-3">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet quia quas
-    suscipit. Fugit dolorem nihil ipsum perspiciatis eius! Harum saepe, quo sit
-    labore sequi doloremque rerum sapiente iure laboriosam vitae.
-  </p>
-  <footer>
-    <app-button>View project</app-button>
-  </footer>
+    <p
+      class="text-sm sm:text-base md:text-lg overflow-ellipsis line-clamp-3 lg:line-clamp-1"
+    >
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet quia quas
+      suscipit. Fugit dolorem nihil ipsum perspiciatis eius! Harum saepe, quo
+      sit labore sequi doloremque rerum sapiente iure laboriosam vitae.
+    </p>
+    <footer class="lg:w-fit lg:ms-auto">
+      <app-button>View project</app-button>
+    </footer>
+  </div>
 </article>
