--- a/src/app/features/landing/projects/projects.component.html
+++ b/src/app/features/landing/projects/projects.component.html
@@ -1,5 +1,7 @@
 <app-landing-section-container headline="Projects">
-  <ul class="grid grid-cols-[repeat(auto-fit,_minmax(20rem,_1fr))] gap-7">
+  <ul
+    class="grid max-lg:grid-cols-[repeat(auto-fit,_minmax(21rem,_1fr))] gap-7"
+  >
     @for (project of projects(); track $index) {
     <li>
       <app-project-item [project]="project" />
