--- a/src/app/components/input/input.component.html
+++ b/src/app/components/input/input.component.html
@@ -1,13 +1,13 @@
 <div class="flex flex-col gap-2">
-  <label [for]="name" class="text-sm sm:text-base md:text-lg">{{
-    label
-  }}</label>
+  <label [for]="name" class="text-sm sm:text-base font-medium">
+    {{ label }}
+  </label>
   <input
     [type]="type"
     [id]="name"
     [placeholder]="placeholder"
     [formControl]="control"
-    class="px-5 py-2 rounded-xl text-sm sm:text-base md:text-lg border-2 border-neutral-300 shadow ring-0 ring-primary-500 focus:shadow-lg focus:ring-2 focus:border-primary-100 text-neutral-700 transition-all placeholder:opacity-50"
+    class="px-5 py-2 rounded-xl text-sm sm:text-base border-2 border-neutral-300 shadow ring-0 ring-primary-500 focus:shadow-lg focus:ring-2 focus:border-primary-100 text-neutral-700 transition-all placeholder:opacity-50"
     [autocomplete]="autocomplete"
   />
 </div>
