update: skills design and content; refactor: resume sections to subcomponent; update: some margins

--- a/src/app/features/landing/resume/components/experience/experience.component.html
+++ b/src/app/features/landing/resume/components/experience/experience.component.html
@@ -1,5 +1,4 @@
-<section>
-  <app-landing-subtitle headline="Experience" />
+<app-resume-section headline="Experience">
   <app-resume-items>
     <li>
       <app-resume-item headline="Servinet Computers" date="2024 - Current" />
@@ -8,4 +7,4 @@
       <app-resume-item headline="NoCountry" date="2021 - 2022" />
     </li>
   </app-resume-items>
-</section>
+</app-resume-section>
