--- a/src/app/features/landing/projects/projects.component.html
+++ b/src/app/features/landing/projects/projects.component.html
@@ -1,6 +1,6 @@
 <app-landing-section-container headline="Projects">
   <ul
-    class="grid max-lg:grid-cols-[repeat(auto-fit,_minmax(21rem,_1fr))] gap-7"
+    class="grid max-lg:grid-cols-[repeat(auto-fit,_minmax(21rem,_1fr))] gap-x-7 gap-y-8"
   >
     @for (project of projects(); track $index) {
     <li>
