--- a/src/app/features/landing/resume/components/education/education.component.html
+++ b/src/app/features/landing/resume/components/education/education.component.html
@@ -1,5 +1,4 @@
-<section>
-  <app-landing-subtitle headline="Education" />
+<app-resume-section headline="Education">
   <app-resume-items>
     <li>
       <app-resume-item
@@ -14,4 +13,4 @@
       <app-resume-item headline="Bachelor in Science" date="2017" />
     </li>
   </app-resume-items>
-</section>
+</app-resume-section>
