add: docker as skill

--- a/src/app/features/landing/resume/components/skills/skills.component.html
+++ b/src/app/features/landing/resume/components/skills/skills.component.html
@@ -32,6 +32,7 @@
     </app-skill-card>
     <app-skill-card headline="Tools">
       <app-skill-item skill="Git" />
+      <app-skill-item skill="Docker" />
     </app-skill-card>
   </div>
 </app-resume-section>
