update: accessibility location and projects min width

--- a/src/app/components/accessibility/accessibility.component.html
+++ b/src/app/components/accessibility/accessibility.component.html
@@ -1,14 +1,12 @@
-<div
-  class="invisible sm:visible fixed top-20 right-10 z-50 flex flex-col gap-3"
->
+<div class="fixed bottom-[50%] right-0.5 flex flex-col gap-3 z-50">
   <button
     class="outline-none bg-primary-500 p-2 rounded-2xl opacity-30 hover:opacity-100 transition-opacity duration-300"
   >
-    <svg class="size-7 text-primary-50" globe-icon></svg>
+    <svg class="size-5 sm:size-6 md:size-7 text-primary-50" globe-icon></svg>
   </button>
   <button
     class="outline-none bg-primary-500 p-2 rounded-2xl opacity-30 hover:opacity-100 transition-opacity duration-300"
   >
-    <svg class="size-7 text-primary-50" moon-icon></svg>
+    <svg class="size-5 sm:size-6 md:size-7 text-primary-50" moon-icon></svg>
   </button>
 </div>
