--- a/src/app/components/accessibility/accessibility.component.html
+++ b/src/app/components/accessibility/accessibility.component.html
@@ -11,11 +11,13 @@
     >
       <li
         class="py-2.5 px-3.5 bg-primary-500 hover:bg-primary-600 text-primary-50 transition-colors duration-150 rounded-t-xl"
+        (click)="setLanguage('es')"
       >
         Español
       </li>
       <li
         class="py-2.5 px-3.5 bg-primary-500 hover:bg-primary-600 text-primary-50 transition-colors duration-150 rounded-b-xl"
+        (click)="setLanguage('en')"
       >
         English
       </li>
