feat: link languages with navbar and config is ready

--- a/src/app/components/navbar-item/navbar-item.component.html
+++ b/src/app/components/navbar-item/navbar-item.component.html
@@ -3,6 +3,6 @@
     [href]="route"
     class="w-full flex items-center justify-center text-sm md:text-base text-center text-primary-900 font-medium px-2 md:px-5 h-16"
   >
-    {{ headline }}
+    {{ headline | translate }}
   </a>
 </li>
