update: display info

--- a/src/app/features/landing/components/sidebar/sidebar.component.html
+++ b/src/app/features/landing/components/sidebar/sidebar.component.html
@@ -20,18 +20,30 @@
   </div>
   <footer class="grid grid-cols-2 md:max-lg:grid-cols-1 gap-5 py-5 px-12">
     <div class="grid grid-cols-2 gap-5">
-      <app-sidebar-social-media-button text="albenbustamante">
+      <app-sidebar-social-media-button
+        text="albenbustamante"
+        socialName="GitHub"
+      >
         <svg class="size-6" github-icon></svg>
       </app-sidebar-social-media-button>
-      <app-sidebar-social-media-button text="Alben Bustamante">
+      <app-sidebar-social-media-button
+        text="Alben Bustamante"
+        socialName="LinkedIn"
+      >
         <svg class="size-6" linkedin-icon></svg>
       </app-sidebar-social-media-button>
     </div>
     <div class="grid grid-cols-2 gap-5">
-      <app-sidebar-social-media-button text="albenbustamante@gmail.com">
+      <app-sidebar-social-media-button
+        text="albenbustamante@gmail.com"
+        socialName="Email"
+      >
         <svg class="size-6" email-icon></svg>
       </app-sidebar-social-media-button>
-      <app-sidebar-social-media-button text="+57 3165574868">
+      <app-sidebar-social-media-button
+        text="+57 3165574868"
+        socialName="Cellphone"
+      >
         <svg class="size-6" phone-icon></svg>
       </app-sidebar-social-media-button>
     </div>
