--- a/src/app/features/landing/components/sidebar/sidebar.component.html
+++ b/src/app/features/landing/components/sidebar/sidebar.component.html
@@ -21,28 +21,32 @@
   <footer class="grid grid-cols-2 md:max-lg:grid-cols-1 gap-5 py-5 px-12">
     <div class="grid grid-cols-2 gap-5">
       <app-sidebar-social-media-button
-        text="albenbustamante"
-        socialName="GitHub"
+        value="socialMedia.github.value"
+        socialName="socialMedia.github.name"
+        url="socialMedia.github.url"
       >
         <svg class="size-6" github-icon></svg>
       </app-sidebar-social-media-button>
       <app-sidebar-social-media-button
-        text="Alben Bustamante"
-        socialName="LinkedIn"
+        value="socialMedia.linkedin.value"
+        socialName="socialMedia.linkedin.name"
+        url="socialMedia.linkedin.url"
       >
         <svg class="size-6" linkedin-icon></svg>
       </app-sidebar-social-media-button>
     </div>
     <div class="grid grid-cols-2 gap-5">
       <app-sidebar-social-media-button
-        text="albenbustamante@gmail.com"
-        socialName="Email"
+        value="socialMedia.email.value"
+        socialName="socialMedia.email.name"
+        url="socialMedia.email.url"
       >
         <svg class="size-6" email-icon></svg>
       </app-sidebar-social-media-button>
       <app-sidebar-social-media-button
-        text="+57 3165574868"
-        socialName="Cellphone"
+        value="socialMedia.phone.value"
+        socialName="socialMedia.phone.name"
+        url="socialMedia.phone.url"
       >
         <svg class="size-6" phone-icon></svg>
       </app-sidebar-social-media-button>
