update: sidebar introduction

--- a/src/app/features/landing/components/sidebar/sidebar.component.html
+++ b/src/app/features/landing/components/sidebar/sidebar.component.html
@@ -8,14 +8,14 @@
       >
         Alben Bustamante
       </h1>
-      <p class="text-center text-primary-950 font-medium">Hey there, I'm</p>
+      <p class="text-center text-primary-950 font-medium">
+        {{ "introduction.greeting" | translate }}
+      </p>
     </div>
-    <!--app-accessibility /-->
   </header>
   <div class="border-y-2 border-primary-100 py-12">
     <p class="text-center text-lg text-primary-900 text-balance font-semibold">
-      A passionate FullStack Developer who builds scalable solutions for Web and
-      Software applications through of Java and Angular.
+      {{ "introduction.resume" | translate }}
     </p>
   </div>
   <footer class="grid grid-cols-2 md:max-lg:grid-cols-1 gap-5 py-5 px-12">
