--- a/src/app/components/accessibility/accessibility.component.html
+++ b/src/app/components/accessibility/accessibility.component.html
@@ -1,4 +1,6 @@
-<div class="fixed bottom-[50%] right-0.5 flex flex-col gap-3 z-50">
+<div
+  class="fixed bottom-[50%] translate-y-1/2 right-0.5 flex flex-col gap-3 z-50"
+>
   <button
     class="cursor-pointer outline-none bg-primary-500 p-2 rounded-2xl opacity-30 hover:opacity-100 transition-opacity duration-300 relative"
     (click)="toggleShowLanguages()"
