--- a/src/app/components/navbar-item/navbar-item.component.html
+++ b/src/app/components/navbar-item/navbar-item.component.html
@@ -1,7 +1,7 @@
-<li class="w-full hover:bg-primary-100">
+<li class="w-full">
   <a
     [href]="route"
-    class="w-full flex items-center justify-center text-sm md:text-base text-center text-primary-900 font-medium px-2 md:px-5 h-16"
+    class="w-full flex items-center justify-center text-sm sm:text-base md:text-lg text-center text-primary-900 font-medium px-2 md:px-5 h-16 hover:scale-105 transition-transform"
   >
     {{ headline | translate }}
   </a>
